# ai_agent_pbl

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: readme-autoupdate.yml
scripts/: update_readme.py
src/github_ai_agent/: __init__.py  agent.py  cli.py  code_review.py  conversation_store.py  github_api_client.py  github_app_auth.py  google_calendar_client.py  harness.py  mcp_client.py  notion_client.py  prompts.py  readme_review.py  readme_updater.py  session_store.py  session_store_schema.sql  tool_client.py  web.py
src/github_ai_agent/orchestrator/: __init__.py  agent.py  domains.py  prompts.py
src/github_ai_agent/web_assets/: app.html  app.js  onboarding.html  onboarding.js  style.css
src/github_ai_agent/webapp/: __init__.py  assets.py  auth.py  github_data.py  integrations.py  task_planning.py
tests/: test_agent_harness_integration.py  test_harness.py  test_session_store.py
