[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-ai-mcp-agent"
version = "0.1.0"
description = "An AI agent that chooses GitHub MCP tools based on the user's question."
requires-python = ">=3.10"
dependencies = [
  "google-api-python-client>=2.140.0",
  "google-auth>=2.30.0",
  "mcp>=1.9.0",
  "openai>=1.90.0",
  "python-dotenv>=1.0.1",
]

[project.scripts]
github-ai-agent = "github_ai_agent.cli:main"
github-ai-agent-ui = "github_ai_agent.web:main"

[tool.setuptools.packages.find]
where = ["src"]
